@@ -519,6 +519,17 @@ sosa:observedProperty schema:domainIncludes :ObservationDataset .
              rdfs:label "asset number"@en .
 
 
+###  http://fdri.ceh.ac.uk/vocab/metadata/calibrationDue
+:calibrationDue rdf:type owl:DatatypeProperty ;
+                rdfs:range [ rdf:type rdfs:Datatype ;
+                             owl:unionOf ( xsd:date
+                                           xsd:dateTime
+                                         )
+                           ] ;
+                rdfs:comment "The date or date/time by which an instrument is due to be (re)calibrated."@en ;
+                rdfs:label "calibration due"@en .
+
+
 ###  http://fdri.ceh.ac.uk/vocab/metadata/dateOfDisposal
 :dateOfDisposal rdf:type owl:DatatypeProperty ;
                 rdfs:subPropertyOf dct:date ;
@@ -1140,6 +1151,10 @@ An Environmental Monitoring Programme may make use of (`fdri:utilises`) any numb
                                                ] ,
                                                [ rdf:type owl:Restriction ;
                                                  owl:onProperty :assetNumber ;
+                                                 owl:maxCardinality "1"^^xsd:nonNegativeInteger
+                                               ] ,
+                                               [ rdf:type owl:Restriction ;
+                                                 owl:onProperty :calibrationDue ;
                                                  owl:maxCardinality "1"^^xsd:nonNegativeInteger
                                                ] ,
                                                [ rdf:type owl:Restriction ;
